--- a/block-BHaabo/assets/stylesheet/style.css
+++ b/block-BHaabo/assets/stylesheet/style.css
@@ -51,8 +51,8 @@ table {
     box-sizing: border-box;
 }
 body{
+    font-weight: 400;
     line-height: 1;
-    font-family: 'Raleway', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
 }
 .container{
@@ -62,55 +62,92 @@ body{
 }
 .header, .footer {
     background-color: rgb(26, 26, 70);
-    display: flex;
     color: rgb(204, 202, 202);
-    font-size: 12px;
+    font-size: 12px;    
     justify-content: space-between;
     align-items: center;
+    font-size: 18px;
+    vertical-align: middle;
+    height: 60px;
+}
+.header a{
+    display: flex;    
 }
 .logo{
-    width: 60px;   
+    width: 90px;   
 }
 .side-bar{
-    width: 50%;
-    border-radius: 5%;
+    border-radius: 10px;
     padding: 25px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-weight: 700;
+    align-self:stretch;
     background-color: lightblue;
 }
 .box{
-    padding: 10px;    
+    padding: 20px 10px;  
+    vertical-align: middle;
 }
 .active{
     color: orange;
-    border-radius: 35%;
+    border-radius: 15px;
     border:2px solid orange;
 }
 .artical{
     width: 100%;
-    height: 500px;
+    height: 600px;
     text-align: justify;
-    border-radius: 12%;
-    padding: 4%;
-    background-color: rgb(221, 233, 236);
+    border-radius: 25px;
+    padding: 4%;   
+    background-color: rgb(221, 236, 247);
+}
+.log{
+    width: 100%;
+    background-color: rgb(240, 250, 255);
+    border-radius: 15px;
 }
 span{
     text-transform: capitalize;
 }
 .flex{
     display: flex;
+    justify-content:space-between;
+    align-items: center;
 }
 h2{
     font-size: 40px;
+    padding: 7px 0;
+    font-weight: 600;
 }
 h3{
     color: #fff;
     font-size: 18px;
 }
 .artical-img{
-    width: 48845px;
+    width: 100%;
     object-fit: contain;
 }
 section{
-    width: 100% ;
+    flex: 0 1 30%;
     padding: 40px 10px;
+}
+.section1{
+    flex: 0 1 65%;
+}
+.artical-text{
+    font-family: 'Raleway', sans-serif;
+    padding: 20px 0;
+}
+.btn{
+    color: white;
+    background-color: rgb(45, 243, 45);
+    width: 100px;
+    font-size: 18px;
+    padding: 5px 0;
+    text-align: center;
+    border-radius: 10px;
+    margin: 5px 20px;
 }
